# job-hunt-template

./: .coverage  .editorconfig  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  release-please-config.json
.claude/skills/add-job-source/: SKILL.md
.claude/skills/tailor-resume/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release-please.yml
cover_letters/: template.md
docs/: TOUR.md
docs/adr/: 0001-record-architecture-decisions.md  0002-separate-facts-from-emphasis.md  0003-filter-on-titles-alone.md  0004-ship-a-working-example-not-a-skeleton.md  0005-the-users-data-never-enters-the-repo.md  0006-one-rendering-path-typst.md
job_hunt/: __init__.py  __main__.py  cli.py  db.py  ingest.py  resume.py
profile.example/: profile.yaml  search.yaml
profile.example/roles/: platform.yaml  sre.yaml
resumes/templates/: resume.html  resume.typ
scripts/: generate_resume.py  ingest_jobs.py  init.py  jobs_cli.py  search_config.py
tests/: conftest.py  test_cli.py  test_db.py  test_ingest.py  test_init.py  test_resume.py  test_search_config.py
tests/fixtures/: remoteok.json  remotive.json  wwr.rss
